# Celer

./: README.md  pyproject.toml
celer/components/: base.py  state_manager.py
celer/management/commands/: generate_component.py
