[project]
name = "celer"
version = "0.1.0"
description = "Celer empowers you to build blazing-fast, SEO-friendly Single Page Applications by combining Django's powerful server-side rendering with a reactive JavaScript runtime."
authors = [
    {name = "Dawdaborje",email = "dawdaborjekujabi@gmail.com"}
]
license = {text = "GPL-3.0 license"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
